fix(subscriptions): layout issue for 6m sub prices (#10956)
* fix(subscriptions): layout issue for 6m sub prices
Because:

* Total price wraps around for certain languages and prices.

This commit:

* Reduce the font size so that the price stays on a single line.
* Adds a title to the price.

Closes #
[10920](https://github.com/mozilla/fxa/issues/10920)

--- a/packages/fxa-payments-server/src/components/PlanDetails/index.scss
+++ b/packages/fxa-payments-server/src/components/PlanDetails/index.scss
@@ -200,6 +200,7 @@
     .plan-details-total-inner {
       display: flex;
       justify-content: space-between;
+      gap: 8px;
     }
 
     p {
@@ -210,13 +211,17 @@
     .label {
       color: #6d6d6e;
       font-weight: 600;
-      margin-top: 5px;
+      margin-top: auto;
     }
 
     .total-price {
       color: rgba(12, 12, 13, 0.8);
-      font-size: 22px;
+      font-size: 18px;
       font-weight: 600;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      margin-top: auto;
     }
   }
 }
